--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
   "name": "animestats-discordbot",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Bot Discord qui publie chaque mois des statistiques de visionnage AniList.",
   "type": "module",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "dev": "NODE_ENV=development node src/index.js",
-    "test": "node test/mask.test.js && node test/stats.test.js"
+  "test": "node test/mask.test.js && node test/stats.test.js",
+  "lint": "eslint src test --ext .js --fix"
   },
-  "keywords": ["discord", "anilist", "chartjs", "bot"],
+  "keywords": [
+    "discord",
+    "anilist",
+    "chartjs",
+    "bot"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "better-sqlite3": "^8.1.0",
+    "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
-    "node-cron": "^3.0.2",
-  "discord.js": "^14.11.0",
-  "better-sqlite3": "^8.1.0"
+    "node-cron": "^3.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^9.35.0"
   }
 }
